syntax = "proto3";

package io.harness.pms.plan;

option java_multiple_files = true;

import "io/harness/pms/plan/plan_node_proto.proto";

service PmsService {
  rpc initializeSdk(InitializeSdkRequest) returns (InitializeSdkResponse);
}

message InitializeSdkRequest {
  string name = 1;
  map<string, Types> supportedTypes = 2;
}

message InitializeSdkResponse {}

message Types {
  repeated string types = 1;
}
