syntax = "proto3";

package io.harness.pms.execution.failure;

option java_multiple_files = true;

import "io/harness/pms/execution/failure/failure_type.proto";

message FailureInfo {
  string errorMessage = 1;
  repeated FailureType failureTypes = 2;
}